# ARM-Cortex-M3-UART-I2C-Protocol-Bridge

./: .gitignore  CMakeLists.txt  Makefile  README.md
Core/Inc/: config.h  dma.h  i2c.h  protocol.h  ring_buffer.h  uart.h
Core/Src/: dma.c  i2c.c  main.c  protocol.c  ring_buffer.c  uart.c
Drivers/CMSIS/: core_cm3.h  stm32f103xb.h
Tests/: CMakeLists.txt  mock_stm32.h  test_protocol.c  test_ring_buffer.c  test_runner.c
